<resources>
    <string name="app_name">ProjectLogin</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="privacy_settings">Privacy</string>
    <string name="privacy">Privacy Settings</string>
    <string name="notification_settings">Notifications</string>
    <string name="notification">Enable/Disable Notifications</string>
    <string name="dark_mode">Dark Theme</string>
    <string name="restricated_mode">Enable/Disable Dark Mode</string>


    <string-array name="privacy_cookies">
        <item>Enable Cookies</item>
        <item>Disable Cookies</item>
    </string-array>
    <string name="name">David</string>
    <string name="supporter">Supporter++</string>
    <string name="home">Home</string>
    <string name="others">Others</string>
    <string name="search">Search</string>
    <string name="ylibrary">Your Library</string>
    <string name="cplaylist">Create A Playlist</string>
    <string name="likedsongs">Liked Songs</string>
    <string name="Logout">Log Out</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>