<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ui.login.MainActivity">
    <item
        android:id="@+id/menuHome"
        android:icon="@drawable/ic_home"
        android:title="@string/home"
        android:onClick="btnHome" />
    <item
        android:id="@+id/menuSearch"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        android:onClick="btnSearch"/>
    <item
        android:id="@+id/menuYLibrary"
        android:icon="@drawable/libraryclone"
        android:title="@string/ylibrary"
        android:onClick="btnYourlibrary"/>
    <item
        android:id="@+id/btnProfile"
        android:icon="@drawable/profile"
        android:title="@string/profile"
        android:onClick="btnProfile"/>

    <item android:title="@string/others">
        <menu>
            <item
                android:id="@+id/menuCreatePlaylist"
                android:icon="@drawable/ic_cplaylist"
                android:title="@string/cplaylist" />

            <item
                android:id="@+id/menuLikedSongs"
                android:icon="@drawable/ic_like"
                android:title="@string/likedsongs" />

        </menu>


    </item>

    <item
        android:id="@+id/btnSettings"
        android:icon="@drawable/settings"
        android:title="@string/settings"
        android:onClick="btnSettings"/>
    <item
        android:id="@+id/btnLogout"
        android:icon="@drawable/logout"
        android:title="@string/Logout"
        android:onClick="btnLogout"/>
</menu>